# Web_HW_Module_10

./: README.md  pyproject.toml  requirements.txt
hw10_project/: docker-compose.yml
hw10_project/hw10_project/: .evn_ex  migration.py  settings.py  urls.py
hw10_project/quotes/: forms.py  models.py  urls.py  views.py  views_my.py
hw10_project/quotes/static/quotes/: style.css
hw10_project/quotes/templates/quotes/: author_detali.html  base.html  index.html
hw10_project/users/: forms.py  models.py  urls.py  views.py
hw10_project/utils/: add_quotes_to_mongodb.py  authors.json  config.ini  db.py  hw.authors.json  hw.quotes.csv  hwauthors.csv  migration.py
hw10_project/utils/out_from_mongodb/: hw.quotes.json
notes/notes/: asgi.py  settings.py  urls.py
notes/quotes/: froms.py  views.py
notes/quotes/migrations/: 0001_initial.py  0002_author_quote_alter_tag_name_delete_note_quote_tags.py
notes/users/: forms.py  views.py
notes/users/migrations/: 0001_initial.py
notes/utils/: json_to_mongodb.py  migration.py
