[tool.poetry]
name = "web-hw-module-10"
version = "0.1.0"
description = ""
authors = ["SerhiiAndreiko <130772110+SerhiiAndreiko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
pymongo = "^4.6.0"
black = "^23.11.0"
psycopg2-binary = "^2.9.9"
quotes = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
